--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://makennamartin97.github.io/kirby-and-pals2/",
+  "homepage": "https://kirbyandpals.com",
   "name": "kirbyandpals",
   "version": "0.1.0",
   "private": true,
